--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,11 @@
             "cwd": "/workspaces/cse_3310_exFAT",
             "binaryPath": "/workspaces/cse_3310_exFAT/extfat",
             "binaryArgs": []
+        },
+        {
+            "cwd": "/workspaces/cse3310_s002_group_5",
+            "binaryPath": "/workspaces/cse3310_s002_group_5/extfat",
+            "binaryArgs": []
         }
     ]
 }
