--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,12 @@
     ],
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "algorithm": "c"
+        "algorithm": "c",
+        "vector": "c",
+        "memory": "c",
+        "optional": "c",
+        "string_view": "c",
+        "string": "c",
+        "system_error": "c"
     }
 }
